--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>师傅，生日快乐！</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Xola">
 	<meta name="robots" content="index, follow" />
@@ -104,7 +104,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
+				<p>师傅，生日快乐！</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
 				<p>another year has gone</p>
@@ -156,14 +156,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">很黑吼？点这边开灯</button>
+					<button class="btn btn-primary" id="play">Sound !</button>
+					<button class="btn btn-primary" id="bannar_coming">Ready...</button>
+					<button class="btn btn-primary" id="balloons_flying">AC~~TION !!!</button>
+					<button class="btn btn-primary" id="cake_fadein">有蛋糕的</button>
+					<button class="btn btn-primary" id="light_candle">点蜡烛吧</button>
+					<button class="btn btn-primary" id="wish_message">生日快乐</button>
+					<button class="btn btn-primary" id="story">霸徒有话说</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
