--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>师傅，生日快乐！</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday Sifu">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">师</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#0719D4;">傅</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    	<h2 style="color:#D14D39;">生</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">日</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">快</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">乐</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">哦</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -162,7 +162,7 @@
 					<button class="btn btn-primary" id="balloons_flying">AC~~TION !!!</button>
 					<button class="btn btn-primary" id="cake_fadein">有蛋糕的</button>
 					<button class="btn btn-primary" id="light_candle">点蜡烛吧</button>
-					<button class="btn btn-primary" id="wish_message">生日快乐</button>
+					<button class="btn btn-primary" id="wish_message">师傅，生日快乐哦！</button>
 					<button class="btn btn-primary" id="story">霸徒有话说</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
