--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>师傅，生日快乐！</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
+				<p>其实也不懂做么明明相差接近一轮的年龄</p>
+				<p>可是很聊得来</p>
+				<p></p>
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
@@ -160,10 +160,10 @@
 					<button class="btn btn-primary" id="play">Sound !</button>
 					<button class="btn btn-primary" id="bannar_coming">Ready...</button>
 					<button class="btn btn-primary" id="balloons_flying">AC~~TION !!!</button>
-					<button class="btn btn-primary" id="cake_fadein">有蛋糕的</button>
-					<button class="btn btn-primary" id="light_candle">点蜡烛吧</button>
-					<button class="btn btn-primary" id="wish_message">师傅，生日快乐哦！</button>
-					<button class="btn btn-primary" id="story">霸徒有话说</button>
+					<button class="btn btn-primary" id="cake_fadein">蛋糕上桌！</button>
+					<button class="btn btn-primary" id="light_candle">点蜡烛吧！</button>
+					<button class="btn btn-primary" id="wish_message">上祝福！</button>
+					<button class="btn btn-primary" id="story">霸徒还有话说</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
