--- a/index.html
+++ b/index.html
@@ -107,50 +107,17 @@
 				<p>师傅，生日快乐！</p>
 				<p>其实也不懂做么明明相差接近一轮的年龄</p>
 				<p>可是很聊得来</p>
-				<p></p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>而且是莫名其妙地突然好起来</p>
+				<p>反正我的回忆停留在那个不讲理的霸道房主</p>
+				<p>然后中间慢慢认识你另一面的回忆很模糊去</p>
+				<p>刚才跑步的时候就突然想起：</p>
+				<p><strong>欸，怎么现在的师傅感觉跟过去不一样？</strong>></p>
+				<p>哈哈哈</p>
+				<p>还有，你的生日礼物已经寄出去了</p>
+				<p>但是应该会迟</p>
+				<p>所以你慢慢等吧！</p>
+				<p>就这样</p>
+				<p>生日快乐！又年轻一岁的小朋友！</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
