--- a/index.html
+++ b/index.html
@@ -105,19 +105,26 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>师傅，生日快乐！</p>
-				<p>其实也不懂做么明明相差接近一轮的年龄</p>
+				<p>其实也不懂做么</p>
+				<p>明明相差接近一轮的年龄</p>
 				<p>可是很聊得来</p>
-				<p>而且是莫名其妙地突然好起来</p>
-				<p>反正我的回忆停留在那个不讲理的霸道房主</p>
-				<p>然后中间慢慢认识你另一面的回忆很模糊去</p>
+				<p>而且是莫名其妙地</p>
+				<p>突然熟起来</p>
+				<p>反正我的金鱼回忆...</p>
+				<p>停留在那个不讲理的霸道房主</p>
+				<p>然后中间慢慢认识</p>
+				<p>你另一面的回忆很模糊去</p>
 				<p>刚才跑步的时候就突然想起：</p>
-				<p><strong>欸，怎么现在的师傅感觉跟过去不一样？</strong>></p>
+				<p>欸，怎么现在的师傅</p>
+				<p>感觉跟过去不一样？</p>
 				<p>哈哈哈</p>
-				<p>还有，你的生日礼物已经寄出去了</p>
+				<p>还有</p>
+				<p>你的生日礼物已经寄出去了</p>
 				<p>但是应该会迟</p>
 				<p>所以你慢慢等吧！</p>
 				<p>就这样</p>
-				<p>生日快乐！又年轻一岁的小朋友！</p>
+				<p>生日快乐！</p>
+				<p>又年轻一岁的小朋友！</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
