--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="yj.mp3"></source>
-	   Your browser isn't invited for super fun audio time.
+	   哎呀，你的手机开不到音乐.
     </audio>
     <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">师</h2>
@@ -111,12 +111,15 @@
 				<p>而且是莫名其妙地</p>
 				<p>突然熟起来</p>
 				<p>反正我的金鱼回忆...</p>
-				<p>停留在那个不讲理的霸道房主</p>
+				<p>就很记得那个不讲理的霸道房主</p>
 				<p>然后中间慢慢认识</p>
-				<p>你另一面的回忆很模糊去</p>
+				<p>那个另一面的你</p>
+				<p>真的</p>
+				<p>很难得找一个能玩到一起的</p>
 				<p>刚才跑步的时候就突然想起：</p>
 				<p>欸，怎么现在的师傅</p>
 				<p>感觉跟过去不一样？</p>
+				<p>我好像感觉不到你的霸气了</p>
 				<p>哈哈哈</p>
 				<p>还有</p>
 				<p>你的生日礼物已经寄出去了</p>
