--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
 				<p>就这样</p>
 				<p>生日快乐！</p>
 				<p>又年轻一岁的小朋友！</p>
+				<p>嗯？</p>
+				<p>谁说生日一定要播生日歌！</p>
+				<p>我就播我们第一首合唱《遇见》</p>
+				<p>我遇见你...</p>
+				<p>是最美丽的意外</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
