--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<button class="btn btn-primary" id="balloons_flying">AC~~TION !!!</button>
 					<button class="btn btn-primary" id="cake_fadein">蛋糕上桌！</button>
 					<button class="btn btn-primary" id="light_candle">点蜡烛吧！</button>
-					<button class="btn btn-primary" id="wish_message">上祝福！</button>
+					<button class="btn btn-primary" id="wish_message">祝福送去！</button>
 					<button class="btn btn-primary" id="story">霸徒还有话说</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
