--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 	   哎呀，你的手机开不到音乐.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">师</h2>
+    	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">傅</h2>
+    	<h2 style="color:#0719D4;"></h2>B
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">生</h2>
+    	<h2 style="color:#D14D39;">B</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">日</h2>
+    	<h2 style="color:#8FAD00;">E</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">快</h2>
+    	<h2 style="color:#8377E4;">E</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">乐</h2>
+    	<h2 style="color:#99C96A;"></h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">哦</h2>
+    	<h2 style="color:#20CFB4;"></h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
