--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">很黑吼？点这边开灯</button>
-					<button class="btn btn-primary" id="play">Sound !</button>
+					<button class="btn btn-primary" id="play">Sound!（记得开声音）</button>
 					<button class="btn btn-primary" id="bannar_coming">Ready...</button>
 					<button class="btn btn-primary" id="balloons_flying">AC~~TION !!!</button>
 					<button class="btn btn-primary" id="cake_fadein">蛋糕上手机！</button>
