--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
 				<p>我就播我们第一首合唱《遇见》</p>
 				<p>我遇见你...</p>
 				<p>是最美丽的意外</p>
+				<p>听完这弹奏...</p>
+				<p>乖乖继续工作咯</p>
+				<p>#gogofighting</p>
+				<p>AH BEE TO 全世界</p>
+				<p>...and batu to bee :)</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
