--- a/index.html
+++ b/index.html
@@ -104,18 +104,24 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
+				<p>……</p>
+				<p>靠北！</p>
+				<p>靠南！</p>
+				<p>靠东！</p>
+				<p>靠西！</p>
+				<p>哈哈哈哈哈哈！</p>
 				<p>师傅，生日快乐！</p>
 				<p>其实也不懂做么</p>
 				<p>明明相差接近一轮的年龄</p>
 				<p>可是很聊得来</p>
 				<p>而且是莫名其妙地</p>
 				<p>突然熟起来</p>
-				<p>反正我的金鱼回忆...</p>
+				<p>反正我的金鱼记忆...</p>
 				<p>就很记得那个不讲理的霸道房主</p>
 				<p>然后中间慢慢认识</p>
 				<p>那个另一面的你</p>
-				<p>真的</p>
-				<p>很难得找一个能玩到一起的</p>
+				<p>真的很难得</p>
+				<p>找一个能玩到一起的</p>
 				<p>刚才跑步的时候就突然想起：</p>
 				<p>欸，怎么现在的师傅</p>
 				<p>感觉跟过去不一样？</p>
